--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:sqlite:cleanhelper.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=Q2hhbmdlVGhpc1NlY3JldEtleUNoYW5nZVRoaXNTZWNyZXRLZXk=
+google.api.key=YOUR_GOOGLE_API_KEY
