--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>clean-helper</name>
     <description>Self-hosted household planner</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -41,6 +41,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-community-dialects</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
