--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 jwt.secret=Q2hhbmdlVGhpc1NlY3JldEtleUNoYW5nZVRoaXNTZWNyZXRLZXk=
-google.api.key=YOUR_GOOGLE_API_KEY
+google.api.key=${GOOGLE_API_KEY}.
 
